mise en place des relations

--- a/src/WCS/CoavBundle/Resources/config/doctrine/Flight.orm.yml
+++ b/src/WCS/CoavBundle/Resources/config/doctrine/Flight.orm.yml
@@ -9,12 +9,6 @@ WCS\CoavBundle\Entity\Flight:
             generator:
                 strategy: AUTO
     fields:
-        departure:
-            type: string
-            length: '4'
-        arrival:
-            type: string
-            length: '4'
         pilot:
             type: string
             length: 255
@@ -23,3 +17,20 @@ WCS\CoavBundle\Entity\Flight:
         takeofTime:
             type: datetime
     lifecycleCallbacks: {  }
+
+    manyToOne:
+        departure:
+            targetEntity: WCS\CoavBundle\Entity\Terrain
+            inversedBy: departures
+        arrival:
+            targetEntity: WCS\CoavBundle\Entity\Terrain
+            inversedBy: arrivals
+        plane:
+            targetEntity: WCS\CoavBundle\Entity\PlaneModel
+            inversedBy: planes
+
+    oneToMany:
+        flights:
+            targetEntity: WCS\CoavBundle\Entity\Reservation
+            mappedBy: flight
+
