--- a/src/WCS/CoavBundle/Resources/config/doctrine/PlaneModel.orm.yml
+++ b/src/WCS/CoavBundle/Resources/config/doctrine/PlaneModel.orm.yml
@@ -26,3 +26,9 @@ WCS\CoavBundle\Entity\PlaneModel:
             type: string
             length: 255
     lifecycleCallbacks: {  }
+
+    oneToMany:
+        planes:
+            targetEntity: WCS\CoavBundle\Entity\Flight
+            mappedBy: plane
+
