--- a/src/WCS/CoavBundle/Resources/config/doctrine/Reservation.orm.yml
+++ b/src/WCS/CoavBundle/Resources/config/doctrine/Reservation.orm.yml
@@ -15,3 +15,16 @@ WCS\CoavBundle\Entity\Reservation:
         nbSeats:
             type: integer
     lifecycleCallbacks: {  }
+
+    manyToMany:
+        passengers:
+            targetEntity: WCS\CoavBundle\Entity\User
+            mappedBy: reservation
+
+    manyToOne:
+        flight:
+            targetEntity: WCS\CoavBundle\Entity\Flight
+            inversedBy: flights
+
+
+
