--- a/src/WCS/CoavBundle/Resources/config/doctrine/Terrain.orm.yml
+++ b/src/WCS/CoavBundle/Resources/config/doctrine/Terrain.orm.yml
@@ -26,3 +26,11 @@ WCS\CoavBundle\Entity\Terrain:
             type: string
             length: 255
     lifecycleCallbacks: {  }
+
+    oneToMany:
+        departures:
+            targetEntity: WCS\CoavBundle\Entity\Flight
+            mappedBy: departure
+        arrivals:
+            targetEntity: WCS\CoavBundle\Entity\Flight
+            mappedBy: arrival
